add variable scope support